src/app/map/map.component.css
.main {
    overflow: hidden;
    width: 100%;
    margin-top: -16px;
    height: calc(100vh - 70px);
}

.map {
    width: 100%;
    height: 100vh;
}

.floating-box {
    background: white;
    position: fixed;
    right: 40px;
    top: 100px;
    padding: 0 15px;
    padding-top: 8px;
    width: 230px;
    z-index: 2;
}

#loc-box {
    top: 180px;
    padding: 8px 15px;
}

#main-box mat-form-field {
    width: 100%;
}

.search-button {
    position: fixed;
    right: 40px;
    top: 100px;
}

.only-mobile {
    display: none;
}

@media (max-width: 560px) {
    .main {
        height: calc(100vh - 56px);
    }

    #main-box {
        width: 80%;
        left: 50%;
        top: 75px;
        margin: 0 auto;
        transform: translateX(-50%);
    }

    .only-mobile {
        display: block;
    }
}

